# distributed-log-monitoring

./: .gitignore  README.md  pyproject.toml
src/distributed_log_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/log_monitor/: contracts.py  main.py
tests/: test_health.py  test_ingest.py
