[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-log-monitor"
version = "0.1.0"
description = "Step-by-step distributed log monitoring system in Python."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "httpx>=0.28,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
